INCLUDES =\
 $(CAPPLET_CFLAGS)\
 $(GCONF_CFLAGS)\
 $(GPHOTO_CFLAGS)

noinst_LIBRARIES = libgnocam.a

libgnocam_a_SOURCES =\
 gnocam-capplet-table-scrolled.c gnocam-capplet-table-scrolled.h\
 gnocam-capplet-table.c gnocam-capplet-table.h\
 gnocam-capplet-model.c gnocam-capplet-model.h\
 gnocam-configuration.c gnocam-configuration.h
